[metadata]
name = apexmq
version = 1.0.0
description = A RabbitMQ extension of the pika library
author = Kavindu Harshitha
author_email = kavindu@apexkv.com
license = Custom License
license_file = LICENSE
url = https://github.com/apexkv/apexmq
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pika>=1.1.0
python_requires = >=3.6

[options.packages.find]
where = apexmq