[metadata]
name = apexmq
version = 1.0.1
description = A developer-friendly library for integrating RabbitMQ with Django applications.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kavindu Harshitha
author_email = kavindu@apexkv.com
license = Custom License
license_file = LICENSE
url = https://github.com/apexkv/apexmq
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pika>=1.1.0
python_requires = >=3.6

[options.packages.find]
where = apexmq